# msgs2train

./: .gitignore  CMakeLists.txt  package.xml
config/: LimxDynamic_WL_Config.yaml  msgs2train.yaml
launch/: run_msgs2train.launch
scrips/: readme.md  script_config.json  script_config.py
scrips/WL_Kinematic/: plot_lf_foot_force_z.py  plot_lf_foot_force_z_local.py  plot_lf_foot_pos_imu_xyz_local.py  plot_lf_foot_pos_imu_z_local.py
scrips/log/: export_bag_to_csv.py  plot_lf_12_20.py  plot_lf_foot_force_z_12_20.py  plot_lf_foot_pos_imu_z_12_20.py  plot_lf_kalman_12_20.py
scrips/log_Gait_GRF_Label/: build_gait_grf_labels.py  build_gait_position_labels.py  crop_force_label_by_time.py  evaluate_gait_grf_labels.py
scrips/log_LF/: export_bag_to_csv.py  plot_lf_12_20.py  plot_lf_foot_force_z_12_20.py  plot_lf_foot_pos_imu_z_12_20.py  plot_lf_foot_z_and_pos_imu.py  plot_lf_kalman_12_20.py  plot_lf_kalman_compare.py  temp_plot.py
scrips/log_LH/: plot_lh_12_20.py  plot_lh_foot_force_z_12_20.py  plot_lh_foot_pos_imu_z_12_20.py  plot_lh_foot_z_and_pos_imu.py  plot_lh_kalman_12_20.py  plot_lh_kalman_compare.py
scrips/log_RF/: plot_rf_12_20.py  plot_rf_foot_force_z_12_20.py  plot_rf_foot_pos_imu_z_12_20.py  plot_rf_foot_z_and_pos_imu.py  plot_rf_kalman_12_20.py  plot_rf_kalman_compare.py
scrips/log_RH/: plot_rh_12_20.py  plot_rh_foot_force_z_12_20.py  plot_rh_foot_pos_imu_z_12_20.py  plot_rh_foot_z_and_pos_imu.py  plot_rh_kalman_12_20.py  plot_rh_kalman_compare.py
scrips/log_data/: plot_value_lf.py  plot_value_lf_local.py  plot_value_lh.py  plot_value_lh_local.py
scrips/log_dataFilter/: plot_value_lf_kalman.py  plot_value_lf_kalman_local.py  plot_value_lh_filter_compare_local.py  plot_value_lh_kalman.py  plot_value_lh_kalman_local.py  plot_value_lh_median_ema_local.py
scrips/log_experiments_fig/: plot_lf_pressure_12_20.py  plot_state_prediction.py
scrips/log_force/: build_contact_state_labels.py  plot_foot_force_all_0_15.py  (+2 more)
src/: LimxDynamics_WL_Kinematic.hpp  msgs2train.cpp
