<?xml version="1.0"?>
<package format="2">
  <name>msgs2train</name>
  <version>0.0.0</version>
  <description>The msgs2train package</description>

  <maintainer email="gucj@njust.edu.cn">jack-gu</maintainer>


  <license>TODO</license>

  <author>Chengjie Gu</author>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>pressure_tr_serial</build_depend>
  <build_export_depend>pressure_tr_serial</build_export_depend>
  <exec_depend>pressure_tr_serial</exec_depend>


  <export>

  </export>
</package>
